--- a/workflow/spatial_variation_global_sensitivity_analysis.ipynb
+++ b/workflow/spatial_variation_global_sensitivity_analysis.ipynb
@@ -109,12 +109,7 @@
     "            ]\n",
     "\n",
     "# get the variable names as a list\n",
-    "variable_names = [variable.name for variable in variables]\n",
-    "\n",
-    "# test set does not have WRF_LM inside\n",
-    "variable_names_test = [variable.name for variable in variables if variable is not WRF_LM]\n",
-    "no_name_I = [4]\n",
-    "test_run_I = [0,2,4,5,8]"
+    "variable_names = [variable.name for variable in variables]"
    ]
   },
   {
@@ -126,9 +121,7 @@
    "source": [
     "#filenames\n",
     "train_parameters_file = '../output/perturbation_matrix_9variables_korobov18.nc'\n",
-    "test_parameters_file = '../output/perturbation_matrix_8variables_korobov19.nc'\n",
     "train_output_filename = '../output/wfv_global_daily_temperature_training_set.pkl'\n",
-    "test_output_filename = '../output/wfv_global_daily_temperature_test_set.pkl'\n",
     "\n",
     "#surrogate output filename\n",
     "LST_surrogate_filename = '../output/LST_klsurrogate_models.pkl'\n",
@@ -183,37 +176,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c35806f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get parameter test range and ensemble\n",
-    "params_t = open_dataset(test_parameters_file)\n",
-    "pnames_t = params_t.sel(variable=variable_names_test).isel(run=test_run_I).variable.values\n",
-    "\n",
-    "# combining both sets of runs\n",
-    "ptest_t = params_t.sel(variable=variable_names_test).isel(run=test_run_I).perturbation_matrix\n",
-    "#\n",
-    "# transform into same variable number as train set and put value of 1 for Land Model\n",
-    "ptest = ptrain.isel(run=test_run_I)\n",
-    "ptest[:,[idx for idx, var_name in enumerate(variable_names) if idx not in no_name_I]] = ptest_t.values\n",
-    "ptest[:,no_name_I] = 1\n",
-    "\n",
-    "# transform the input matrix\n",
-    "variable_matrix_test_t = transform_perturbation_matrix(ptest)\n",
-    "# transform into same scheme number as train set and put value of 0 where doesn't exist\n",
-    "variable_matrix_test = variable_matrix_train.isel(run=test_run_I)\n",
-    "scheme_names = variable_matrix_test['scheme'].values\n",
-    "no_scheme_I = [idx for idx, scheme_name in enumerate(scheme_names)\n",
-    "               if scheme_name not in variable_matrix_test_t['scheme'].values]\n",
-    "variable_matrix_test[:,[idx for idx, scheme_name in enumerate(scheme_names) if idx not in no_scheme_I]] = \\\n",
-    "    variable_matrix_test_t.values\n",
-    "variable_matrix_test[:,no_scheme_I] = 0"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d5ad42a3-c623-4419-89dc-549117238bc6",
    "metadata": {},
@@ -223,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "92b12046",
    "metadata": {},
    "outputs": [
@@ -231,8 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done loading training data from binary file\n",
-      "Done loading test data from binary file\n"
+      "Done loading training data from binary file\n"
      ]
     }
    ],
@@ -240,16 +201,12 @@
     "#load the training data\n",
     "with open(train_output_filename, 'rb') as fp:\n",
     "    train_dict = pickle.load(fp)\n",
-    "    print('Done loading training data from binary file')\n",
-    "    \n",
-    "with open(test_output_filename, 'rb') as fp:\n",
-    "    test_dict = pickle.load(fp)\n",
-    "    print('Done loading test data from binary file')"
+    "    print('Done loading training data from binary file')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3a319a62",
    "metadata": {},
    "outputs": [
@@ -294,52 +251,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b889ba16",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test set info:\n",
-      "Ensembles size : 5\n",
-      "Parameter dim : 20\n",
-      "FVCOM Timeseries size : 112\n",
-      "WRF Timeseries size : 111\n",
-      "Spatial size FVCOM: 35749\n",
-      "Spatial size WRF: 484,543\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get and check test sizes\n",
-    "nens = len(test_dict['runs'])\n",
-    "ntime = test_dict['LST'][0][0].shape[0]\n",
-    "ntime_, ngrid = test_dict['LST'][0][1].shape\n",
-    "nens_ = len(test_dict['LST'])\n",
-    "nens__, ndim = variable_matrix_test.shape\n",
-    "ntime__, nlat, nlon = test_dict['T2'][0][1].shape\n",
-    "\n",
-    "# sanity check\n",
-    "assert(ntime==ntime_)\n",
-    "assert(nens==nens_)\n",
-    "assert(nens==nens__)\n",
-    "\n",
-    "# Print useful info\n",
-    "print('Test set info:')\n",
-    "print(f'Ensembles size : {nens}')\n",
-    "print(f'Parameter dim : {ndim}')\n",
-    "print(f'FVCOM Timeseries size : {ntime}')\n",
-    "print(f'WRF Timeseries size : {ntime__}')\n",
-    "print(f'Spatial size FVCOM: {ngrid}')\n",
-    "print(f'Spatial size WRF: {nlat},{nlon}')\n",
-    "\n",
-    "nens_test = nens"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fa439e9b-e65d-4175-89fb-02975a505572",
    "metadata": {},
@@ -349,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e262681c-4271-4634-b2cd-5222ea64928d",
    "metadata": {},
    "outputs": [
@@ -397,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b6bed879-e6ec-4ae3-9dd3-6eade5b915b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x14f95deafc70>]"
+       "[<matplotlib.lines.Line2D at 0x14992ab147f0>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e0832370",
    "metadata": {},
    "outputs": [
@@ -465,15 +376,6 @@
      "data": {
       "text/plain": [
        "(18, 3288908)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(5, 3288908)"
       ]
      },
      "metadata": {},
@@ -493,25 +395,12 @@
     "        model_data['LST']['train'] = value_temp\n",
     "    else:\n",
     "        model_data['LST']['train'] = append(model_data['LST']['train'],value_temp,axis=0)\n",
-    "display(model_data['LST']['train'].shape)\n",
-    "        \n",
-    "# construct the training data into right dimensions\n",
-    "for rdx, run in enumerate(test_dict['LST']):\n",
-    "    tdx = (run[0] >= ts) & (run[0] < te)\n",
-    "    ntime2_ = tdx.sum()\n",
-    "    value_temp = run[1].isel(time=tdx).values.reshape(1,-1)\n",
-    "    if rdx == 0:\n",
-    "        model_data['LST']['test'] = value_temp\n",
-    "    else:\n",
-    "        model_data['LST']['test'] = append(model_data['LST']['test'],value_temp,axis=0)\n",
-    "assert(ntime2['LST'] == ntime2_)\n",
-    "\n",
-    "display(model_data['LST']['test'].shape)"
+    "display(model_data['LST']['train'].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "cc5ae6d1-82ad-4116-b787-2a04c5877acd",
    "metadata": {},
    "outputs": [
@@ -519,15 +408,6 @@
      "data": {
       "text/plain": [
        "(18, 23915892)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(5, 23915892)"
       ]
      },
      "metadata": {},
@@ -545,20 +425,7 @@
     "        model_data['T2m']['train'] = value_temp\n",
     "    else:\n",
     "        model_data['T2m']['train'] = append(model_data['T2m']['train'],value_temp,axis=0)\n",
-    "display(model_data['T2m']['train'].shape)\n",
-    "        \n",
-    "# construct the training data into right dimensions\n",
-    "for rdx, run in enumerate(test_dict['T2']):\n",
-    "    tdx = (run[0] >= ts) & (run[0] < te)\n",
-    "    ntime2_ = tdx.sum()\n",
-    "    value_temp = run[1].isel(time=tdx).values.reshape(1,-1)\n",
-    "    if rdx == 0:\n",
-    "        model_data['T2m']['test'] = value_temp\n",
-    "    else:\n",
-    "        model_data['T2m']['test'] = append(model_data['T2m']['test'],value_temp,axis=0)\n",
-    "assert(ntime2['T2m'] == ntime2_)\n",
-    "\n",
-    "display(model_data['T2m']['test'].shape)"
+    "display(model_data['T2m']['train'].shape)"
    ]
   },
   {
@@ -571,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ab59fbc0-b437-47dc-b811-56995ad61545",
    "metadata": {},
    "outputs": [
@@ -598,14 +465,12 @@
     "# surrogate input settings\n",
     "# using hot_enconding or not\n",
     "hot_encode = True\n",
-    "# setup training and test inputs based on onehotencoding or not\n",
+    "# setup training inputs based on onehotencoding or not\n",
     "x_vals = {}\n",
     "if hot_encode:\n",
     "    x_vals['train'] = variable_matrix_train\n",
-    "    x_vals['test'] = variable_matrix_test\n",
     "else:\n",
-    "    x_vals['train'] = ptrain\n",
-    "    x_vals['test'] = ptest"
+    "    x_vals['train'] = ptrain"
    ]
   },
   {
@@ -618,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "baf77b2b-72f2-4915-b9e0-566758c32056",
    "metadata": {},
    "outputs": [],
@@ -632,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "8fdf6d5c-66fa-413f-a40d-0c01d88fa55d",
    "metadata": {},
    "outputs": [
@@ -655,7 +520,6 @@
     "pca_data = {}\n",
     "for var in model_data:\n",
     "    trainY = model_data[var]['train']\n",
-    "    testY = model_data[var]['test']\n",
     "    # Decompose the spatiotemporal series using PCA/KL\n",
     "    pca_obj = PCA(n_components=var_explained, \n",
     "                  random_state=random_seeds[0], \n",
@@ -669,7 +533,6 @@
     "    pca_data[var] = {}\n",
     "    # get the outputs from the PCA\n",
     "    pca_data[var]['klxi_train'] = pca_obj.transform(trainY)\n",
-    "    pca_data[var]['klxi_test']  = pca_obj.transform(testY)\n",
     "    pca_data[var]['eigenratio'] = pca_obj.explained_variance_ratio_\n",
     "    pca_data[var]['neig'] = pca_obj.n_components_\n",
     "    pca_data[var]['eigenvalues'] = pca_obj.explained_variance_\n",
@@ -695,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "1bc45c4b-c628-48fe-b6dd-39b23d16c91f",
    "metadata": {},
    "outputs": [],
@@ -719,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "d9341adb-b623-4e22-8638-922e958f97c7",
    "metadata": {},
    "outputs": [],
@@ -767,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "3d81454e-ee5b-4a09-9cd7-49d9c0dd4bc9",
    "metadata": {},
    "outputs": [
