--- a/workflow/daily_LST_surrogate_analysis.ipynb
+++ b/workflow/daily_LST_surrogate_analysis.ipynb
@@ -66,11 +66,7 @@
     "from surrogate.nn_regression import make_nn_surrogate_model, tch, npy\n",
     "from surrogate.pc_regression import make_pc_surrogate_model\n",
     "from surrogate.utils import surrogate_model_predict\n",
-    "from surrogate.gsa import compute_sensitivities, plot_sens\n",
-    "from kan import KAN\n",
-    "from torch.nn import HuberLoss\n",
-    "from torch import sum as tsum\n",
-    "from torch import mean as tmean"
+    "from surrogate.gsa import compute_sensitivities, plot_sens"
    ]
   },
   {
@@ -597,205 +593,6 @@
    "source": [
     "# initialize the surrogate dictionary\n",
     "kl_surrogate = dict()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dea00632-0f49-4338-ba81-fe7cdb5432bf",
-   "metadata": {},
-   "source": [
-    "### Train and check KAN model"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "7631d4da-cf0c-4a88-a716-7a7085408852",
-   "metadata": {},
-   "source": [
-    "t = train_dict['LST'][0][0][train_dict['LST'][0][0] >= ts]\n",
-    "x = train_dict['LST'][0][1].lon.values\n",
-    "y = train_dict['LST'][0][1].lat.values"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "bca3245f-4b79-4da4-9dfe-fe2e792197b7",
-   "metadata": {},
-   "source": [
-    "x_scaled = (x - x.min()) / (x.max() - x.min())\n",
-    "y_scaled = (y - y.min()) / (y.max() - y.min())\n",
-    "t_scaled = (t - t.min()) / (t.max() - t.min())"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "fae8d2aa-515e-4ecf-82ee-491b5f3bfe00",
-   "metadata": {},
-   "source": [
-    "# point wise surrogate\n",
-    "coord_extended = tile([x_scaled, y_scaled],[1,ntime2]).transpose()\n",
-    "time_extended = repeat(t_scaled,repeats=ngrid)\n",
-    "xyt_extended = hstack([coord_extended, time_extended.reshape(-1,1)])\n",
-    "train_x_extended = hstack([tile(train_x.values,[ngrid*ntime2, 1]), repeat(xyt_extended,repeats=nens_train,axis=0)])\n",
-    "test_x_extended = hstack([tile(test_x.values,[ngrid*ntime2, 1]), repeat(xyt_extended,repeats=nens_test,axis=0)])"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "fa1a4301-000b-4410-9b9a-03bd46a4a939",
-   "metadata": {},
-   "source": [
-    "trainY_extended = trainY.reshape(-1,1)\n",
-    "testY_extended = testY.reshape(-1,1)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ba4bea46-ca89-43ba-bc89-3490e9abcb06",
-   "metadata": {},
-   "source": [
-    "dataset = {}\n",
-    "dataset['train_input'] = tch(train_x_extended)\n",
-    "dataset['train_label'] = tch(trainY_extended)\n",
-    "dataset['test_input'] = tch(test_x_extended)\n",
-    "dataset['test_label'] = tch(testY_extended)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "2461145a-56e2-4d25-aa9e-b6b311c7e4cd",
-   "metadata": {},
-   "source": [
-    "dataset = {}\n",
-    "dataset['train_input'] = tch(train_x.values)\n",
-    "dataset['train_label'] = tch(klxi_train)\n",
-    "dataset['test_input'] = tch(test_x.values)\n",
-    "dataset['test_label'] = tch(klxi_test)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "bd6b4431-5cfd-4e1a-9ac3-ffeef1f5661a",
-   "metadata": {},
-   "source": [
-    "def loss_fn(x, y):\n",
-    "    Hloss = HuberLoss(reduction='none',delta=0.5) #1)\n",
-    "    loss = Hloss(x,y)\n",
-    "    wse = tsum(loss * tch(eigenratio),axis=1)\n",
-    "    return tmean(wse)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "3c38e57e-84d4-4020-bd7f-daf74ee54f71",
-   "metadata": {},
-   "source": [
-    "# create a KAN: 20-D inputs, 9-D output, and 15 hidden neurons. cubic spline (k=3), 5 grid intervals (grid=5).\n",
-    "KAN_models = []\n",
-    "KAN_results = []\n",
-    "for random_seed in random_seeds:\n",
-    "    KAN_models.append(KAN(width=[dataset['train_input'].shape[1],\n",
-    "                                 int((dataset['train_input'].shape[1]+dataset['train_label'].shape[1])/2)+1,\n",
-    "                                 dataset['train_label'].shape[1]], \n",
-    "                          grid=3, k=3, seed=random_seed))\n",
-    "    KAN_results.append(KAN_models[-1].train(dataset, opt=\"LBFGS\", steps=10, lamb=do,\n",
-    "        #loss_fn = HuberLoss(delta=0.75),\n",
-    "        loss_fn = loss_fn,\n",
-    "    ))\n",
-    "    KAN_models[-1].prune()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ff8912b6-f37d-4f71-a671-9e4081d4fa14",
-   "metadata": {},
-   "source": [
-    "test_losses = array([kr['test_loss'][-1] for kr in KAN_results])\n",
-    "test_losses.mean()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ac77e1f8-8170-41e9-bf7a-4d2608b95551",
-   "metadata": {},
-   "source": [
-    "# Checking KAN accuracy for sqrt(eigenvalue)-weighted combined\n",
-    "rmse_v = 2\n",
-    "r2_v = -0.5\n",
-    "bnds = 1.5\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 2,sharey=True,figsize=(12,5))\n",
-    "\n",
-    "for ii in [0,1]:\n",
-    "    \n",
-    "    if ii == 0:\n",
-    "        comparison = '(a) training'\n",
-    "        klxi_model = klxi_train\n",
-    "        # nn\n",
-    "        for ss, sur in enumerate(KAN_models):\n",
-    "            klxi_pred = npy(sur.forward(dataset['train_input']))\n",
-    "            if ss == 0:\n",
-    "                klxi_preds = klxi_pred[None,:,:]\n",
-    "            else:\n",
-    "                klxi_preds = append(klxi_preds,klxi_pred[None,:,:],axis=0)\n",
-    "    else:\n",
-    "        comparison = '(b) test'\n",
-    "        \n",
-    "        klxi_model = klxi_test\n",
-    "        # nn\n",
-    "        for ss, sur in enumerate(KAN_models):\n",
-    "            klxi_pred = npy(sur.forward(dataset['test_input']))\n",
-    "            if ss == 0:\n",
-    "                klxi_preds = klxi_pred[None,:,:]\n",
-    "            else:\n",
-    "                klxi_preds = append(klxi_preds,klxi_pred[None,:,:],axis=0)\n",
-    "                \n",
-    "    model_w = (sqrt(eigenvalues)*klxi_model).sum(axis=1)/sqrt(eigenvalues).sum()\n",
-    "    pred_w = {'KAN':  zeros(klxi_preds[:,:,0].shape)}\n",
-    "    mse_w = {'KAN':  zeros(klxi_preds[:,:,0].shape[0])}\n",
-    "    for ss,klxi_pred in enumerate(klxi_preds):\n",
-    "        pred_w['KAN'][ss,:] = (sqrt(eigenvalues)*klxi_pred).sum(axis=1)/sqrt(eigenvalues).sum()\n",
-    "        mse_w['KAN'][ss] = ((eigenvalues*(klxi_pred - klxi_model)**2).sum(axis=1)/eigenvalues.sum()).mean()\n",
-    "    \n",
-    "    print(comparison)\n",
-    "    print('KAN MSE_w stats')\n",
-    "    print(mse_w['KAN'].mean())\n",
-    "    print(mse_w['KAN'].std())\n",
-    "    \n",
-    "    axs[ii].text(bnds-0.5,r2_v,'$R^2_\\mu$:')\n",
-    "    for st,surrogate_type in enumerate(['KAN']):\n",
-    "        pred_wm = pred_w[surrogate_type].mean(axis=0)\n",
-    "        pred_werror = abs(stack((pred_w[surrogate_type].min(axis=0),\n",
-    "                                 pred_w[surrogate_type].max(axis=0))) - pred_wm)\n",
-    "        py = axs[ii].errorbar(model_w, pred_wm,\n",
-    "                              yerr=pred_werror,\n",
-    "                              fmt='o',\n",
-    "                              capsize=4,\n",
-    "                              label=surrogate_type)\n",
-    "        u = ((model_w - pred_wm)**2).sum()\n",
-    "        v = ((model_w - model_w.mean())**2).sum()\n",
-    "        r2 = 1 - u/v\n",
-    "        axs[ii].text(bnds-0.5,r2_v-(1+st)*0.2,str(round(r2,3)),color=py[0].get_color())\n",
-    "        axs[ii].plot([-bnds,bnds], [-bnds,bnds], 'k--', lw=2)\n",
-    "    axs[ii].set_xlabel(r'WRF-FVCOM $\\xi_\\mu$')\n",
-    "    if ii == 0:\n",
-    "        axs[ii].set_ylabel(r'predicted $\\xi_\\mu$')\n",
-    "    axs[ii].set_xlim([-bnds,bnds])\n",
-    "    axs[ii].set_ylim([-bnds,bnds])\n",
-    "    axs[ii].set_title(f'{comparison}')\n",
-    "    axs[ii].legend(loc='upper left')\n",
-    "    axs[ii].grid()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "98f7c504-393c-4118-bcd0-831eb4d083de",
-   "metadata": {},
-   "source": [
-    "# plot model with lowest test_loss\n",
-    "bmodel = test_losses.argmin()\n",
-    "KAN_models[bmodel].plot()"
    ]
   },
   {
